# OpenChroma

./: .coveragerc  .flake8  .gitignore  README.md  cov.sh  docs.sh  format.sh  pyproject.toml  script.py  test.sh
.github/workflows/: python-package.yml
docs/source/: conf.py  imageops.rst  index.rst
openchroma/: colorspace.py  constants.py  imageops.py  utils.py
tests/: requirements.tests.txt  test_colorspace.py  test_imageops.py  test_utils.py
